2008-02-20  Akira TAGOH  <tagoh@redhat.com>

	* src/factory.c (imsettings_manager_real_start_im): do not update
	.xinputrc if requested.
	(imsettings_manager_real_stop_im): likewise.

	* imsettings/imsettings-request.c (imsettings_request_start_im):
	Add update_xinputrc option.
	(imsettings_request_start_im_async): likewise.
	(imsettings_request_stop_im): likewise.
	(imsettings_request_stop_im_async): likewise.

	* imsettings/imsettings-observer.c (imsettings_start_im):
	Add update_xinputrc option.
	(imsettings_stop_im): likewise.
	(imsettings_observer_real_start_im): likewise.
	(imsettings_observer_real_stop_im): likewise.

	* imsettings/imsettings.xml (StartIM): Add update_xinputrc option.
	(StopIM): likewise.

	* utils/imsettings-stop.c (main): Add --no-update option.

	* utils/imsettings-restart.c (main): Add --no-update option.

	* utils/imsettings-start.c (main): Add --no-update option.

	* imsettings/imsettings-info.c (imsettings_info_finalize):
	Invoke the finalizer from the parent class.

	* src/factory_info.c (imsettings_info_manager_fam_event_loop):
	Process the FAM event within one idle call.

	* imsettings/imsettings-info.c (_unquote_string): new.
	(imsettings_info_notify_properties): unquote string for escaped characters.

2008-02-19  Akira TAGOH  <tagoh@redhat.com>

	* src/factory_info.c (imsettings_info_manager_fam_event_loop):
	Update the fam status if the result code is FAMEndExist anyway.
	(imsettings_info_manager_pending_init): new function to check
	if the initial FAM events are proceeded.
	(imsettings_info_manager_real_get_list): wait for the initialization
	finished.
	(imsettings_info_manager_real_get_current_user_im): likewise.
	(imsettings_info_manager_real_get_current_system_im): likewise.
	(imsettings_info_manager_real_get_info): likewise.

	* src/factory.c (imsettings_manager_real_start_im):
	Add appropriate error handling.

	* src/factory.c (reload_cb): Do nothing for reloading anymore.
