@@ -55,12 +55,14 @@ fi
 [ -z "$XIM" ] && XIM=none
 [ -n "$GTK_IM_MODULE" ] && export GTK_IM_MODULE
 [ -n "$QT_IM_MODULE" ] && export QT_IM_MODULE
+# For backward compatibility
+[ -z "$IMSETTINGS_IGNORE_ME" ] && IMSETTINGS_IGNORE_ME=$IM_CHOOSER_IGNORE_ME
 
 cat <<EOF
 GTK_IM_MODULE=$GTK_IM_MODULE
 QT_IM_MODULE=$QT_IM_MODULE
 XIM=$XIM
-IM_CHOOSER_IGNORE_ME=$IM_CHOOSER_IGNORE_ME
+IMSETTINGS_IGNORE_ME=$IMSETTINGS_IGNORE_ME
 XIM_PROGRAM=$XIM_PROGRAM
 XIM_ARGS="`echo $XIM_ARGS | sed -e "s/\\\\([\\"']\\\\)/\\\\\\\\\\\\1/g"`"
 PREFERENCE_PROGRAM=$PREFERENCE_PROGRAM
