@@ -160,7 +160,7 @@ imsettings_info_notify_properties(GObject     *object,
 		"GTK_IM_MODULE=",
 		"QT_IM_MODULE=",
 		"XIM=",
-		"IM_CHOOSER_IGNORE_ME=",
+		"IMSETTINGS_IGNORE_ME=",
 		"XIM_PROGRAM=",
 		"XIM_ARGS=",
 		"PREFERENCE_PROGRAM=",
